# CVDrone

./: LICENSE  README.md
src/ArduinoBaseStation/: README.md  RadioOutput.ino
src/BaseStation/Controller/: main.cpp
src/Controller/: CMakeLists.txt  main.cpp
src/FaceTracker/: CMakeLists.txt  main.cpp
src/RaspberryPi/: ZoomFocusControl.py
src/base_station/Controller/: CMakeLists.txt  DroneController.cpp  DroneController.h  main.cpp
src/base_station/DroneController/: DroneController.cpp  DroneController.h
src/base_station/RadioOutput/: RadioOutput.ino
src/drone_onboard/ArduinoReceiver/: ArduinoReceiver.ino
src/drone_onboard/RaspberryPi/: Focuser.py  ZoomFocusControl.py
src/receiver/: Focuser.cpp  Focuser.h  receiver.ino
